[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython", "numpy", "scipy", "pandas"]
build-backend = "setuptools.build_meta"

[project]
name = "reactIDR"
version = "2.0.1"
description = "Implementation of the IDR (Irreproducible Discovery Rate) method for RNA reactivity data."
readme = "README.md"
authors = [
    {name = "carushi", email = "1845273+carushi@users.noreply.github.com"}
]
license = {text = "GPL2"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "scipy>=1.13.1",
    "matplotlib",
    "pandas>=2.2.3"
]

[project.scripts]
reactIDR = "reactIDR.main:main"

[project.urls]
Homepage = "https://github.com/carushi/reactIDR"
Repository = "https://github.com/carushi/reactIDR"

[tool.setuptools]
packages = { find = { where = ["."] , include = ["reactIDR*"] } }

